# druum-dungeon-crawler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
assets/: README.md
assets/classes/: core.classes.ron
assets/dungeons/: floor_01.dungeon.ron  floor_02.dungeon.ron
assets/encounters/: floor_01.encounters.ron
assets/enemies/: core.enemies.ron
assets/items/: core.items.ron
assets/races/: core.races.racelist.ron
assets/skills/: fighter.skills.ron  mage.skills.ron  priest.skills.ron
assets/spells/: core.spells.ron
assets/town/: core.recruit_pool.ron  core.shop_stock.ron  core.town_services.ron
project/implemented/: 20260429-022500-bevy-0-18-1-skeleton-init.md  20260429-173500-bevy-0-18-1-state-machine-feature-2.md  20260501-194500-bevy-0-18-1-asset-pipeline-feature-3.md  20260501-233000-dungeon-grid-data-model-feature-4.md  20260502-000000-feature-5-input-system-leafwing.md  20260503-010900-feature-6-audio-system.md  20260503-195500-feature-7-grid-movement-first-person-camera.md  20260504-000000-feature-11-party-character-ecs-model.md  20260504-023000-feature-8-3d-dungeon-renderer.md  20260504-050000-feature-9-dungeon-lighting-atmosphere.md  20260504-150000-feature-10-auto-map-minimap.md  20260505-202700-feature-12-inventory-equipment.md  20260507-000000-feature-13-cell-features.md  20260507-120000-feature-14-status-effects-system.md  20260508-120000-feature-15-turn-based-combat-core.md  20260508-220000-feature-16-encounter-system-and-random-battles.md  20260508-235900-feature-16-recovery-verify-and-commit.md  20260511-120001-feature-17-enemy-billboard-sprite-rendering.md  20260511-180000-feature-18a-town-square-shop-inn.md  20260511-190000-feature-18a-town-square-shop-inn.md  20260512-173000-feature-18b-town-temple-guild.md  20260513-feature-19-character-creation.md  20260514-120000-feature-20a-spell-registry.md  20260514-120000-feature-20b-skill-trees.md  20260514-180000-feature-20c-spell-menu.md  20260514-210000-feature-20b-review-fixup.md  20260514-220000-feature-20c-review-fixup.md
project/orchestrator/: 20260429-021500-pipeline-state-setup.md  20260429-023500-bevy-0-18-1-skeleton-feature-1.md  20260504-000000-feature-11-party-character-ecs-model.md  20260504-050000-feature-9-dungeon-lighting-atmosphere.md  20260504-160000-feature-10-auto-map-minimap-research-plan.md  20260504-170000-feature-11-party-character-ecs-model.md  20260505-100000-feature-12-inventory-equipment-research-plan.md  20260506-100000-feature-13-cell-features-research-plan.md  20260507-200000-feature-14-status-effects-system.md  20260508-120000-pipeline-state-update-marker.md  20260508-150000-feature-15-turn-based-combat-core.md  20260510-104145-feature-16-encounter-system-and-random-battles.md  20260511-152400-feature-17-enemy-billboard-sprite-rendering.md  20260511-215508-feature-18a-town-square-shop-inn.md  20260513-133936-feature-19-character-creation.md  20260514-000000-feature-20-spells-skill-tree-final.md  20260514-200000-pre-phase-2-planner.md  PIPELINE-STATE-feature-18b-final.md  PIPELINE-STATE-feature-19-final.md  PIPELINE-STATE.md
project/plans/: 20260429-022500-bevy-0-18-1-skeleton-init.md  20260429-031500-bevy-0-18-1-state-machine-feature-2.md  20260501-164500-bevy-0-18-1-asset-pipeline-feature-3.md  20260501-230000-feature-4-dungeon-grid-data-model.md  20260502-000000-feature-5-input-system-leafwing.md  20260502-120000-feature-6-audio-system.md  20260503-130000-feature-7-grid-movement-first-person-camera.md  20260503-223000-feature-8-3d-dungeon-renderer.md  20260504-050000-feature-9-dungeon-lighting-atmosphere.md  20260504-150000-feature-10-auto-map-minimap.md  20260504-170000-feature-11-party-character-ecs-model.md  20260505-090000-feature-12-inventory-equipment.md  20260506-100000-feature-13-cell-features.md  20260507-124500-feature-14-status-effects-system.md  (+7 more)
research/: 20260326-01-bevy-first-person-dungeon-crawler-rpg.md
scripts/: gen_placeholder_icons.sh
src/: lib.rs  main.rs
tests/: class_table_loads.rs  dungeon_floor_loads.rs  dungeon_geometry.rs  dungeon_movement.rs  equip_from_loaded_items.rs  item_db_loads.rs  skill_tree_loads.rs  spell_db_loads.rs
(+245 files in other folders)
