[package]
name = "druum"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "First-person grid-based dungeon crawler RPG (Wizardry/Etrian Odyssey style)"
license = "Unlicense OR MIT"

[dependencies]
bevy = { version = "=0.18.1", default-features = false, features = [
    "3d",          # 0.18 umbrella for 3D pipeline (renderer, materials, transforms)
    "png",         # PNG image asset support
    "ktx2",        # Compressed texture container format
    "zstd_rust",   # Pure-Rust zstd for KTX2 (renamed from `zstd` in 0.18; `zstd_c` is the C variant)
    "bevy_text",   # Text rendering (debug overlays, future UI)
    # bevy_winit, bevy_pbr, bevy_asset are likely pulled in transitively via "3d".
    # If first compile errors with "module not found" or "feature not found",
    # add the missing one explicitly here.
    # x11 is Linux-only — do NOT add for macOS-only dev. Use a target-cfg block
    # if/when Linux CI is added later.
] }

[features]
default = []
# Enable fast incremental rebuilds via Bevy dylib. NEVER include in release builds.
# Usage: `cargo run --features dev`
dev = ["bevy/dynamic_linking"]

# Optimize transitive deps even in dev profile so Bevy renderer stays performant.
[profile.dev.package."*"]
opt-level = 2

# Keep our own crate at low opt-level for fast incremental compile.
[profile.dev]
opt-level = 1
