[package]
name = "druum"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "First-person grid-based dungeon crawler RPG (Wizardry/Etrian Odyssey style)"
license = "Unlicense OR MIT"

[dependencies]
bevy = { version = "=0.18.1", default-features = false, features = [
    "3d",          # 0.18 umbrella for 3D pipeline (renderer, materials, transforms)
    "png",         # PNG image asset support
    "ktx2",        # Compressed texture container format
    "zstd_rust",   # Pure-Rust zstd for KTX2 (renamed from `zstd` in 0.18; `zstd_c` is the C variant)
    "bevy_text",   # Text rendering (debug overlays, future UI)
    "default_font", # Bundle a built-in font so `TextFont::default()` renders glyphs.
                    # Without this, Text spawns silently with a null font handle and
                    # nothing visible appears (debug HUD bug on PR #8).
    # bevy_winit, bevy_pbr, bevy_asset are likely pulled in transitively via "3d".
    # If first compile errors with "module not found" or "feature not found",
    # add the missing one explicitly here.
    # x11 is Linux-only — do NOT add for macOS-only dev. Use a target-cfg block
    # if/when Linux CI is added later.
] }
bevy_common_assets = { version = "=0.16.0", features = ["ron"] }
bevy_asset_loader  = "=0.26.0"
leafwing-input-manager = { version = "=0.20.0", default-features = false, features = ["keyboard", "mouse"] }
bevy_egui = { version = "=0.39.1", default-features = false, features = ["render", "default_fonts"] }
# bevy_sprite3d 8.0 <-> bevy 0.18. Provides Sprite/Sprite3d components that build
# a cached textured 3D quad with `unlit` / `alpha_mode` / `pixels_per_metre`.
# The crate does NOT auto-billboard — see face_camera system in enemy_render.rs.
bevy_sprite3d = "8"
# serde and ron are transitively present via Bevy but must be declared explicitly
# in Rust 2024 edition to be usable as direct crate references in our source.
serde = { version = "1", features = ["derive"] }
ron   = "0.12"
rand  = { version = "0.9", default-features = false, features = ["std", "std_rng", "small_rng", "os_rng"] }

[dev-dependencies]
rand_chacha = { version = "0.9", default-features = false, features = ["std"] }

[features]
default = []
# Enable fast incremental rebuilds via Bevy dylib + filesystem hot-reload of assets.
# NEVER include in release builds.
# Usage: `cargo run --features dev`
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

# Optimize transitive deps even in dev profile so Bevy renderer stays performant.
[profile.dev.package."*"]
opt-level = 2

# Keep our own crate at low opt-level for fast incremental compile.
[profile.dev]
opt-level = 1
